log
Fri Apr 22 15:22:26 UTC 2022: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:23: error: ‘lt’ undeclared (first use in this function)
     map->lower_than = lt
                       ^~
treemap.c:41:23: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:42:5: error: expected ‘;’ before ‘return’
     return TreeMap;
     ^~~~~~
treemap.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
8f3d4a3
Fri Apr 22 15:22:43 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:12: error: expected expression before ‘TreeMap’
     return TreeMap;
            ^~~~~~~
treemap.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
a898d34
Fri Apr 22 15:22:55 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
d974c5e
Fri Apr 22 15:24:57 UTC 2022: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
6df0209
Fri Apr 22 15:29:46 UTC 2022: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:74:20: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
   TreeMap* buscado=tree->root;
                    ^~~~
treemap.c:74:12: error: unused variable ‘buscado’ [-Werror=unused-variable]
   TreeMap* buscado=tree->root;
            ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fac73a4
Fri Apr 22 15:37:47 UTC 2022: 
 treemap.c | 23 +++++++++++++++++++++--
 1 file changed, 21 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:74:20: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
   TreeMap* buscado=tree->root;
                    ^~~~
treemap.c:75:13: error: expected ‘)’ before ‘tree’
   (TreeMap* tree, void* key1, void* key2){
             ^~~~
treemap.c:76:3: error: expected expression before ‘while’
   while(is_equal(tree,key,buscado->key =! 0)
   ^~~~~
test.c:606:1: error: expected declaration or statement at end of input
 }
 ^
In file included from test.c:4:0:
treemap.c:74:12: error: unused variable ‘buscado’ [-Werror=unused-variable]
   TreeMap* buscado=tree->root;
            ^~~~~~~
test.c:606:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
b50828f
Fri Apr 22 15:38:01 UTC 2022: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:74:20: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
   TreeMap* buscado=tree->root;
                    ^~~~
treemap.c:75:34: error: ‘TreeMap {aka struct TreeMap}’ has no member named ‘key’
   while(is_equal(tree,key,buscado->key =! 0)
                                  ^~
treemap.c:76:3: error: expected ‘)’ before ‘{’ token
   {
   ^
treemap.c:95:1: error: expected expression before ‘}’ token
 }
 ^
treemap.c:95:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
b85ba58
